--- a/application.conf
+++ b/application.conf
@@ -1,1 +1,31 @@
 
+## Database configuration
+db {
+  provider = janusgraph
+  janusgraph {
+    ## Storage configuration
+    storage {
+      backend = cql
+      hostname = ["IP_ADDRESS"]
+      cql {
+        cluster-name = thp
+        keyspace = thehive
+      }
+    }
+    ## Index configuration
+    index.search {
+      backend = elasticsearch
+      hostname = ["127.0.0.1"]
+      index-name = thehive
+    }
+  }
+}
+
+## Attachment storage configuration
+storage {
+  ## Local filesystem
+  provider: localfs
+  localfs {
+    location: /opt/thp/thehive/files
+  }
+}
